Fixing styles and scaling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,38 +17,48 @@ body {
 	font-size: 12px;
 }
 
-progress::-moz-progress-bar { 
-	border: 0px;
+progress { 
+	color: #48B7B2;
+	border: none;
 	border-radius: 20px;
+}
+
+progress::-moz-progress-bar { 
 	background: #48B7B2;
+}
+
+progress::-webkit-progress-bar {
+	border-radius: 20px;
+	background: #efefef;
 }
 
 progress::-webkit-progress-value {
-	border: 0px;
 	border-radius: 20px;
 	background: #48B7B2;
 }
 
-progress { 
-	color: #48B7B2;
-	border: 0px;
-	border-radius: 20px;
-}
-
 #magic {
-	width: 25%;
+	width: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 #population {
-	width: 25%;
+	width: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 #sword {
-	width: 25%;
+	width: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 #money {
-	width: 25%;
+	width: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .stat-bar {
@@ -104,6 +114,7 @@ progress {
 
 .dialogue {
 	width: 50%;
+	font-size: 30px;
 }
 
 .left {
